--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+
     <application
         android:name=".ContactDedoppelganger"
         android:allowBackup="true"
@@ -22,6 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service android:name=".data.service.ContactService"
+            android:exported="false"
+            android:enabled="true">
+        <intent-filter>
+            <action android:name="com.example.contactdedoppelganger.IContactService" />
+        </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
