--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
         </activity>
         
         <service android:name=".data.service.ContactService"
-            android:exported="false"
-            android:enabled="true">
+            android:exported="false">
         <intent-filter>
             <action android:name="com.example.contactdedoppelganger.IContactService" />
         </intent-filter>
