--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,11 @@ kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name  = "kotlinx-coroutines-test", version.ref = "kotlinCoroutines" }
+androidx-core-testing = { group = "androidx.arch.core", name  = "core-testing", version = "2.2.0" }
+mockito-core = { group = "org.mockito", name  = "mockito-core", version = "4.+" }
+mockito-inline = { group = "org.mockito", name  = "mockito-inline", version = "4.+" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
